--- a/demoProjEWB/demoProjEWB.csproj
+++ b/demoProjEWB/demoProjEWB.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <ProjectGuid>{a84677ce-a2a6-48b9-a77f-ccd0932c45b7}</ProjectGuid>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
